# calendar

./: .env.example  .taplo.toml  Cargo.toml  README.md  deny.toml  diesel.toml  justfile
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/rustup/: action.yml
.github/workflows/: ci.yml  client.yml  global.yml  nextjs-biomejs.js.yml  nextjs-biomejs.yml  server.yml
client/: .gitignore  .swiftlint.yml  biome.json  next.config.js  package.json  pnpm-lock.yaml  rome.json
client/Calendar/: CalendarApp.swift  ContentView.swift
client/Calendar.xcodeproj/: project.pbxproj
client/Calendar.xcodeproj/project.xcworkspace/xcuserdata/yagiz.xcuserdatad/: UserInterfaceState.xcuserstate
client/Calendar.xcodeproj/xcuserdata/yagiz.xcuserdatad/xcschemes/: xcschememanagement.plist
client/Calendar/Components/Calendar/: CalendarView.swift  DayColumn.swift  SlotColumn.swift  ToolbarItem.swift  WeekView.swift
client/app/: layout.tsx  page.tsx  providers.tsx
client/app/login/: page.tsx
client/components/: tauri-hooks.tsx  user-auth-form.tsx
client/components/ui/: button.tsx
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/src/: main.rs
server/: Cargo.toml
server/migrations/2023-08-25-211716_init/: down.sql  up.sql
server/src/: database.rs  error.rs  main.rs  schema.rs
server/src/models/: group.rs  mod.rs  user.rs  user_group.rs
server/src/routes/: auth.rs  health.rs  mod.rs
