[workspace]
members = ["server", "client/src-tauri"]

[workspace.package]
authors     = ["Yagiz Nizipli <yagiz@nizipli.com"]
description = "Calendar"
edition     = "2021"
homepage    = "https://github.com/anonrig/calendar"
keywords    = []
license     = "MIT"
repository  = "https://github.com/anonrig/calendar"

[workspace.dependencies]
# Crates
calendar_server = { path = "server" }
calendar_tauri  = { path = "client/src-tauri" }

# Dependencies
anyhow                    = { version = "1.0.75" }
axum-extra                = { version = "0.7.7", features = ["typed-routing"] }
axum                      = { version = "0.6.20", features = ["tracing", "http2", "macros", "headers"] }
dotenvy                   = { version = "0.15.7" }
google-calendar           = { version = "0.7.0" }
tauri                     = { version = "2.0.0-alpha.11" }
tauri-build               = { version = "2.0.0-alpha.8" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tokio                     = { version = "1.32.0", features = ["full"] }
tracing                   = { version = "0.1.37" }
tracing-subscriber        = { version = "0.3.17", features = ["env-filter"] }
serde                     = { version = "1.0.185", features = ["derive"] }
serde_json                = { version = "1.0.105" }

# Dev Dependencies
insta = { version = "1.31.0", features = ["yaml", "glob", "walkdir"] }

[workspace.metadata.workspaces]
allow_branch = "main"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true
