[workspace]
members = ["server"]

[workspace.package]
authors     = ["Yagiz Nizipli <yagiz@nizipli.com"]
description = "Calendar"
edition     = "2021"
homepage    = "https://github.com/anonrig/calendar"
keywords    = []
license     = "MIT"
repository  = "https://github.com/anonrig/calendar"

[workspace.dependencies]
# Crates
calendar_server = { path = "server" }

# Dependencies
dotenvy    = { version = "0.15.7" }
serde      = { version = "1.0.185", features = ["derive"] }
serde_json = { version = "1.0.106" }

[workspace.metadata.workspaces]
allow_branch = "main"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true
