[package]
name                  = "calendar_tauri"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true
rust-version          = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json                = { workspace = true }
serde                     = { workspace = true }
tauri                     = { workspace = true, features = ["tray-icon"] }
tauri-plugin-window-state = { workspace = true }
[profile.release]
lto           = true
codegen-units = 1
strip         = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
